infrastructure/kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: ${K8S_NAMESPACE}
  labels:
    app: frontend
    service: frontend-service

spec:
  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: ClusterIP
